# AAL2

./: .cproject  .project  CMakeLists.txt  Doxyfile.in  README  README.md  run.sh  setup.sh  test1
AlgorithmResults/: results  results2
include/: CrisisAlgorithm.h  CrisisAlgorithmCaseGenerator.h  CrisisAlgorithmChecker.h  CrisisAlgorithmResult.h  FileReader.h  InvalidArgumentsException.h  Node.h  NodePtr.h  NodePtrTable.h  NodeTree.h
src/: CrisisAlgorithm.cpp  CrisisAlgorithmCaseGenerator.cpp  CrisisAlgorithmChecker.cpp  CrisisAlgorithmResult.cpp  CrisisAlgorrithmCaseGenerator.cpp  FileReader.cpp  InvalidArgumentsException.cpp  Node.cpp  NodeTree.cpp  main.cpp
testData/: test1  test2  test3  test4  test5
